// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Matches shallow snapshot 1`] = `
<div>
  <Connect(MetaTags)
    description="Topcoder Payment Tool"
    title="Topcoder Payment Tool"
  />
  <Routes />
  <Connect(ErrorMessageContainer) />
</div>
`;

exports[`Matches shallow snapshot in dev mode 1`] = `
<div>
  <Connect(MetaTags)
    description="Topcoder Payment Tool"
    title="Topcoder Payment Tool"
  />
  <Routes />
  <Connect(ErrorMessageContainer) />
  <DevTools />
</div>
`;
